--- a/style.css
+++ b/style.css
@@ -1,83 +1,272 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Fenix&family=Poppins:wght@100;200;300;400;500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Fenix&family=Poppins:wght@100;200;300;400;500&family=Pushster&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Tamil:ital,wght@0,100..900;1,100..900&display=swap");
 
 body {
-    background-color: #b6aeae;
+  background-color: white;
+  font-family: Noto + Serif + Tamil;
 }
 .logo {
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
 }
 .header {
-    
-    position: fixed;
-    top: 0%;
-    left: 0;
-    width: 100%;
-    height: 150px;
-    z-index: 1000;
+  position: fixed;
+  top: 0%;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  z-index: 4;
 }
 
-.ubi  {
-    width: 2.5rem;
-    height: 2.5rem;
-    
+.ubi {
+  width: 2.5rem;
+  height: 2.5rem;
 }
 
 .wt {
-    width: 2rem;
-    height: 2rem;
+  width: 2rem;
+  height: 2rem;
 }
 
 .desc_ubi {
-    font-size: 1.3rem;
-    color:antiquewhite;
-    margin-bottom: 1rem;
+  font-size: 1.3rem;
+  color: antiquewhite;
+  margin-bottom: 1rem;
 }
 
 .number {
-    font-size: 1.25rem;
-    color:antiquewhite;
-    margin-bottom: 7px;
+  font-size: 1.25rem;
+  color: antiquewhite;
+  margin-bottom: 7px;
 }
 
 nav {
-    display: flex;
-    justify-content:space-between;
-    align-items:center;
-    background-color: #131415;
-    padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #131415;
+  padding: 1rem;
+  box-shadow: 0px 18px 34px rgba(0, 0, 0, 0.92);
 }
 
-
 ul {
-    list-style: none;
-    display: flex;
-    gap: 0.65rem;
+  list-style: none;
+  display: inline-flex;
+  gap: 0.65rem;
 }
 
 ul a {
-    color: aliceblue;
-    
+  color: aliceblue;
 }
 
 li a {
-    color:#ec0d19;
-    font-weight: 500;
-    font-size: 1.35rem;
-    transition: 0.7s;
+  color: #ec0d19;
+  font-weight: 500;
+  font-size: 1.35rem;
+  transition: 0.85s;
 }
 
 li a:hover {
-    color: white;
+  color: aliceblue;
 }
 
+a {
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inline-flex;
+  color: crimson;
+  font-size: 1rem;
+  position: relative;
+}
+
+a::after {
+  content: "";
+  position: absolute;
+  bottom: -0.25rem;
+  background-color: crimson;
+  width: 100%;
+  height: 0.1rem;
+  transition: all 750ms ease-in-out;
+  transform-origin: center;
+  transform: scaleX(0);
+}
+
+a:hover::after {
+  transform: scaleX(1);
+}
+
+/*-----------------*/
+h1 {
+  margin-top: 175px;
+  text-transform: uppercase;
+  color: #ec0d19;
+  text-align: center;
+}
+.container {
+  display: flex;
+  height: auto;
+  gap: 10px;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  margin-top: 100px;
+  /*border: 5px solid black;*/
+}
+
+.card {
+  background-color: var(--card-bg);
+  padding: 0.5rem;
+  padding-bottom: 1rem;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.card__img {
+  max-width: 300px;
+  border-radius: 0.75rem;
+}
+
+.card__info {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  gap: 2rem;
+  /*border: 5px solid black;*/
+}
+
+.card__user {
+  display: flex;
+  gap: 0.625rem;
+  align-items: center;
+}
+
+.user__title {
+  font-weight: 500;
+  color: var(--text-white);
+  background-color: var(--card-bg);
+  font-size: 2rem;
+  color: #ec0d19;
+}
+
+.user__img {
+  width: 3.125rem;
+  height: 3.125rem;
+  border-radius: 50%;
+  background: url(./img/th.jpg_copa2.jpg) no-repeat center/cover;
+}
+
+.btn {
+  padding: 1rem 2rem;
+  border-radius: 3rem;
+  font-weight: 600;
+  border: 2px solid #16161a;
+  width: 100%;
+  text-align: center;
+  cursor: pointer;
+}
+
+.card__btns {
+  display: flex;
+  justify-content: center;
+  gap: 0.65rem;
+}
+
+.btn--secundary {
+  background: none;
+  color: var(--text-gray);
+  border: 2px solid #16161a;
+  transition: 0.95s;
+}
+
+.btn--secundary:hover {
+  background-color: rgb(123, 230, 123);
+  color: #16161a;
+  border: 2.5px solid rgb(2, 68, 2);
+  transition: 0.95s;
+}
+
+.btn--primary {
+  background: none;
+  color: var(--text-gray);
+  border: 2px solid #16161a;
+  transition: 0.95s;
+}
+
+.btn--primary:hover {
+  background: rgb(255, 131, 86);
+  color: #16161a;
+  border: 2.5px solid rgb(247, 68, 3);
+  transition: 0.95s;
+}
+
+h2 {
+  text-align: center;
+  color: crimson;
+  font-size: 2.5rem;
+  font-weight: 300;
+}
+
+/*label {
+  border: 2px solid black;
+  border-radius: 25px;
+  display: inline-block;
+  text-align: center;
+  margin-left: 185px;
+  width: 75%;
+  height: auto;
+  background-color: aquamarine;
+}*/
+
+label {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  width: 50%;
+  height: auto;
+  flex-wrap: wrap;
+  margin: auto;
+  margin-bottom: 2.5rem;
+  background: linear-gradient(
+    45deg,
+    crimson,
+    rgb(187, 14, 14),
+    rgb(247, 68, 3)
+  );
+  animation: cambiar 3s infinite ease;
+  background-size: 400% 400%;
+  border-radius: 25px;
+  border: none;
+  box-shadow: 0px 18px 34px rgba(0, 0, 0, 0.92);
+}
+
+@keyframes cambiar {
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
+}
+
+p {
+  font-size: 1.2rem;
+  color: antiquewhite;
+}
+
+h2 {
+  color: antiquewhite;
+}
